--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
 		<artifactId>gson</artifactId>
 		<version>2.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>13.0.1</version>
+    </dependency>
     
     <dependency>
       <groupId>org.slf4j</groupId>
